--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -79,7 +79,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ywd\\AppData\\Local\\Temp\\ipykernel_2600\\3757097015.py:44: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
+      "C:\\Users\\ywd\\AppData\\Local\\Temp\\ipykernel_17292\\1578005912.py:44: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
       "  plt.figure(figsize=(10, 10))\n"
      ]
     },
@@ -590,7 +590,7 @@
       "Red: ['100_01.jpg', '100_07.jpg', '100_08.jpg', '100_12.jpg', '100_20.jpg', '200_03.jpg', '200_05.jpg', '200_09.jpg', '200_15.jpg', '200_16.jpg', '200_17.jpg', '200_21.jpg', '200_24.jpg']\n",
       "Yellow: ['100_02.jpg', '100_24.jpg', '200_20.jpg']\n",
       "Green: ['100_03.jpg', '100_04.jpg', '100_05.jpg', '100_06.jpg', '100_09.jpg', '100_10.jpg', '100_11.jpg', '100_13.jpg', '100_14.jpg', '100_16.jpg', '100_17.jpg', '100_18.jpg', '100_21.jpg', '100_22.jpg', '100_23.jpg', '200_01.jpg', '200_02.jpg', '200_04.jpg', '200_06.jpg', '200_07.jpg', '200_08.jpg', '200_10.jpg', '200_11.jpg', '200_12.jpg', '200_13.jpg', '200_14.jpg', '200_18.jpg', '200_19.jpg', '200_22.jpg', '200_23.jpg', '200_25.jpg']\n",
-      "undefined: ['100_15.jpg', '100_19.jpg', '100_25.jpg']\n"
+      "Undefined: ['100_15.jpg', '100_19.jpg', '100_25.jpg']\n"
      ]
     }
    ],
@@ -660,7 +660,7 @@
     "print(\"Red:\", red_images)\n",
     "print(\"Yellow:\", yellow_images)\n",
     "print(\"Green:\", green_images)\n",
-    "print(\"undefined:\", undefined_images)"
+    "print(\"Undefined:\", undefined_images)"
    ]
   }
  ],
